added another h3 element with comments in script

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div>
+            <h3><a href=""></a>Galactic Shelf</h3><!--This is the one I think should be hidden-->
             <h3><a href="">Saucy Constellations</a></h3>
             <h3><a href="">The Big Bang's</a></h3>
         </div>
