added commments to commits

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
+    <header>
+        <h3><a href=""></a>Saucy Constellations</h3>
+        <h3><a href="">Galactic Shelf</a></h3> <!--created cocktail-->
+        <h3><a href="">Big Bangers</a></h3>
+    </header>
+
+    <div>
+
+    </div>
     
+
+
     
 </body>
 </html>
