made cahnges to number of HTML files and changed layout of index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header class="top-bar">
         <nav>
             <ul>
-                <li><a href=""></a>Saucy Zodiac's</a></li>
                 <li><a href="">Galactic Shelf</a></li>
                 <li><a href="">Big Bangers</a></li>
             </ul>
@@ -19,12 +18,47 @@
     </header>
 
     <div class="container">
-        <div>
+        <div >
             <div>
-                <h1>Cosmic Cocktail Generator</h1>
+                <h1>Pick your zodiac</h1>
             </div>
-            <div>
-                <a><img src=""></a>
+            <div class="zodiac-icons">
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div> 
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div class="cntr-img">
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
+                <div>
+                    <a><img src=""></a>
+                </div>
             </div>
         </div>
     </div>
