--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             </div>
         </div>
     </div>
-    <script src="./assets/script.js">
-        
-    </script>
+
+    
+<script src="./assets/space.js"></script>
+<script src="./assets/cocktail.js"></script>
 
 </body>
 </html>
