added link to JQuery script and gave decription in which script does what

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         </div>
     </div>
 
-    
+    <!--JQuery Script-->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--NASA photos script-->
 <script src="./assets/space.js"></script>
+    <!--Cocktail Generator script-->
 <script src="./assets/cocktail.js"></script>
 
 </body>
