add sun gif and zodiac imgs

--- a/index.html
+++ b/index.html
@@ -27,41 +27,44 @@
             </div>
             <div class="zodiac-icons">
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\aquarius.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\aries.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\cancer.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\capricorn.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\gemini.png"></a>
                 </div> 
                 <div>
-                    <a><img src=""></a>
-                </div>
-                <div class="cntr-img">
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\leo.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\libra.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\pisces.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\sagittarius.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\scorpio.png"></a>
                 </div>
                 <div>
-                    <a><img src=""></a>
+                    <a><img src="assets\images\zodiacs\taurus.png"></a>
                 </div>
+                <div>
+                    <a><img src="assets\images\zodiacs\virgo.png"></a>
+                </div>
+            </div>
+            <div id="cntr-img">
+                <a><img src="assets\images\rotatingSun.gif"></a>
             </div>
         </div>
     </div>
