Created Galactic Shelf page and added css/js links to the pages i've made.

--- a/galacticshelf/galacticshelf.html
+++ b/galacticshelf/galacticshelf.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cos</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,23 +12,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <div class="title">
-                <h1>Big Bangers</h1>
-            </div>
-            <div class="description">
-                <p>Wlecome to big bangers, our curated selection of top five best cosmic creations from around the known galaxy.</p>
-            </div>
-            <div>
-                <or id="rand5"></or>
-            </div>
+        <div class="title">
+            <h1>Galactic Shelf</h1>
+        </div>
+        <div class="description">
+            <p>Welcome to the Galactic Shelf, here we collect all of your creations for your selection.</p>
+        </div>
+        <div>
+            <or id="user-cocktails">
+            </or>
         </div>
     </div>
-         <!--JQuery Script-->
+       <!--JQuery Script-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<!--NASA photos script-->
+    <!--NASA photos script-->
 <script src="./assets/space.js"></script>
-<!--Cocktail Generator script-->
+    <!--Cocktail Generator script-->
 <script src="./assets/cocktail.js"></script>
 </body>
 </html>
