added description for zodiac criteria

--- a/index.html
+++ b/index.html
@@ -28,43 +28,56 @@
             <div class="zodiac-icons">
                 <div>
                     <a><img src="assets\images\zodiacs\aquarius.png"></a>
+                    <p class="zodiac-desc">(Water Beaver): January 20 - February 18</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\aries.png"></a>
+                    <p class="zodiac-desc">(Ram): March 21 - April 19</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\cancer.png"></a>
+                    <p class="zodiac-desc">(Crab): June 22 - July 22</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\capricorn.png"></a>
+                    <p class="zodiac-desc">(Goat): Decemeber 22 - January 19</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\gemini.png"></a>
+                    <p class="zodiac-desc">(Twins): May 21 - June 21</p>
                 </div> 
                 <div>
                     <a><img src="assets\images\zodiacs\leo.png"></a>
+                    <p class="zodiac-desc">(Lion): July 23 - August 22</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\libra.png"></a>
+                    <p class="zodiac-desc">(Balance): September 23 - October 23</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\pisces.png"></a>
+                    <p class="zodiac-desc">(Fish): February 19 - March 20</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\sagittarius.png"></a>
+                    <p class="zodiac-desc">(Archer): November 22 - December 21</p>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\scorpio.png"></a>
+                    <p class="zodiac-desc">(Scorpion): October 24 - November 21</p>>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\taurus.png"></a>
+                    <p class="zodiac-desc">(Bull): April 20 - May 20</p>>
                 </div>
                 <div>
                     <a><img src="assets\images\zodiacs\virgo.png"></a>
+                    <p class="zodiac-desc">(Virgin): August 23 - September 22</p>
                 </div>
             </div>
             <div id="cntr-img">
                 <a><img src="assets\images\rotatingSun.gif"></a>
+                <p class="sun-desc">The Sun located at the middle of our Galaxy is a 4.5 billion-year-old yellow dwarf star. It is comprised of hyrdogen and helium.</p>
             </div>
         </div>
     </div>
