--- a/creation/creation.html
+++ b/creation/creation.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cosmic Cocktail Creator</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -57,5 +61,11 @@
             </div>
         </div>
     </div>
+        <!--JQuery Script-->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<!--NASA photos script-->
+<script src="./assets/space.js"></script>
+<!--Cocktail Generator script-->
+<script src="./assets/cocktail.js"></script>
 </body>
 </html>
