added a footer and sub-header tagline to html document

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="">Big Bangers</a></li>
             </ul>
         </nav>
+        <div id="subheader">"These drinks are <i></i>out of this world!<i></i></div>
     </header>
 
     <div class="container">
@@ -31,6 +32,9 @@
             </div>
         </div>
     </div>
+
+    <hr>
+    <footer>Cosmic Cocktail Generator © 2023. An intersteller Project by Group 3. </footer>
 
     <!--JQuery Script-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
