added a footer and subheader tagline to html file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <hr>
-    <footer>Cosmic Cocktail Generator © 2023. An intersteller Project by Group 3. </footer>
+    <footer>Cosmic Cocktail Generator © 2023. An Astonomical Project by Group 3. </footer>
 
     <!--JQuery Script-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
