added footer, subheader tagline, and line above footer to html file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="">Big Bangers</a></li>
             </ul>
         </nav>
+        <div id="sub-header">"These drinks are <i>out of this world!</i>"</div>
     </header>
 
     <div class="container">
@@ -81,6 +82,8 @@
             </div>
         </div>
     </div>
+    <hr>
+    <footer>Cosmic Cocktail Creator © 2023. A Stellar Project by Group 3.</footer>
 
     <!--JQuery Script-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
