added buttons to html page

--- a/user-creations/user-creations.html
+++ b/user-creations/user-creations.html
@@ -28,8 +28,9 @@
             <h4 id="created-name" placeholder="The ..."></h4>
           </div>
           <div id="cocktail-picture">
-            <img src="" />
+            <img src=""/>
           </div>
+          <button class="btn btn-danger" id="try-again" aria-placeholder="Try Again?"></button>
         </div>
       </div>
       <div class="container">
@@ -57,6 +58,10 @@
         <div id="user-horo">
           <p></p>
         </div>
+      </div>
+      <div>
+        <button class="btn btn-primary" id="gsBtn" aria-placeholder="Your List"></button>
+        <button class="btn btn-secondary" id="mainBtn" placeholder="Main"></button>
       </div>
     </div>
     <!--JQuery Script-->
