added badges to th eselection elements

--- a/creation/creation.html
+++ b/creation/creation.html
@@ -18,10 +18,10 @@
     <div class="container">
         <div class="card">
                 <form id="selections">
-                    <label for="name-input">Creation Name</label>
-                    <input type="text" id="name-input" placeholder="Let's start with a name" name="name-input"></textarea>
+                    <label for="name-input">Cosmic Creation Name</label>
+                    <input type="text" id="name-input" placeholder="Let's start with a name" name="name-input" class="fa-solid fa-martini-glass"></textarea>
                     <label for="zodiac-select">Zodiac Sign</label>
-                    <select id="zodiac-select">
+                    <select id="zodiac-select" class="fa-sharp fa-regular fa-ram fa-bounce">>
                         <option>Aries</option>
                         <option>Taurus</option>
                         <option>Gemini</option>
@@ -36,7 +36,7 @@
                         <option>Pisces</option>
                     </select>
                     <label for="ing-select"></label>
-                    <select id="ing-select">
+                    <select id="ing-select" class="fa-light fa-bottle-droplet fa-beat">
                         <option>Vodka</option>
                         <option>gin</option>
                         <option>rum</option>
