--- a/user-creations/user-creations.html
+++ b/user-creations/user-creations.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cosmic Cocktail 2.0</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,10 +25,10 @@
       <div class="img card">
         <div>
           <div>
-            <h4 id="created-name" placeholder="The ..."></h4>
+            <h4 class="card-title" id="created-name" aria-placeholder="The Cosmic Cocktail" ></h4>
           </div>
           <div id="cocktail-picture">
-            <img src="" />
+            <img src="" aria-placeholder=""/>
           </div>
         </div>
       </div>
