add links to changes to all html pages

--- a/bigbangers/bigbangers.html
+++ b/bigbangers/bigbangers.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cos</title>
+    <title>Cosmic Coctail 2.0</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -24,11 +24,11 @@
             </div>
         </div>
     </div>
-         <!--JQuery Script-->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<!--NASA photos script-->
-<script src="./assets/space.js"></script>
-<!--Cocktail Generator script-->
-<script src="./assets/cocktail.js"></script>
+                <!--JQuery Script-->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <!--NASA photos script-->
+        <script src="./assets/space.js"></script>
+        <!--Cocktail Generator script-->
+        <script src="./assets/cocktail.js"></script>
 </body>
 </html>
