--- a/user-creations/user-creations.html
+++ b/user-creations/user-creations.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
-      rel="stylesheet"
-    />
+    <title>Cosmic Coctail 2.0</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -64,7 +61,7 @@
         <button class="btn btn-secondary" id="mainBtn" placeholder="Main"></button>
       </div>
     </div>
-    <!--JQuery Script-->
+            <!--JQuery Script-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!--NASA photos script-->
     <script src="./assets/space.js"></script>
