moved html from folders and that solved the problem

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!--NASA photos script-->
 <script src="./assets/space.js"></script>
     <!--Cocktail Generator script-->
-<script src="./assets/cocktail.js"></script>
+<script src="./assets/"></script>
 
 </body>
 </html>
