style main page and add img

--- a/index.html
+++ b/index.html
@@ -5,79 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmic Coctail Creator</title>
+    <link rel="stylesheet" type="text/css" href="./assets/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="top-bar">
+    <header class="top-bar d-flex flex-row justify-content-center align-items-center>
         <nav>
             <ul>
                 <li><a href="">Galactic Shelf</a></li>
                 <li><a href="">Big Bangers</a></li>
             </ul>
         </nav>
+        <h1 class="ms-5">Pick your zodiac</h1>
     </header>
 
     <div class="container">
         <div >
-            <div>
-                <h1>Pick your zodiac</h1>
-            </div>
-            <div class="zodiac-icons">
-                <div>
-                    <a><img src="assets\images\zodiacs\aquarius.png"></a>
-                    <p class="zodiac-desc">(Water Beaver): January 20 - February 18</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\aries.png"></a>
-                    <p class="zodiac-desc">(Ram): March 21 - April 19</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\cancer.png"></a>
-                    <p class="zodiac-desc">(Crab): June 22 - July 22</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\capricorn.png"></a>
-                    <p class="zodiac-desc">(Goat): Decemeber 22 - January 19</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\gemini.png"></a>
-                    <p class="zodiac-desc">(Twins): May 21 - June 21</p>
-                </div> 
-                <div>
-                    <a><img src="assets\images\zodiacs\leo.png"></a>
-                    <p class="zodiac-desc">(Lion): July 23 - August 22</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\libra.png"></a>
-                    <p class="zodiac-desc">(Balance): September 23 - October 23</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\pisces.png"></a>
-                    <p class="zodiac-desc">(Fish): February 19 - March 20</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\sagittarius.png"></a>
-                    <p class="zodiac-desc">(Archer): November 22 - December 21</p>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\scorpio.png"></a>
-                    <p class="zodiac-desc">(Scorpion): October 24 - November 21</p>>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\taurus.png"></a>
-                    <p class="zodiac-desc">(Bull): April 20 - May 20</p>>
-                </div>
-                <div>
-                    <a><img src="assets\images\zodiacs\virgo.png"></a>
-                    <p class="zodiac-desc">(Virgin): August 23 - September 22</p>
-                </div>
-            </div>
             <div id="cntr-img">
                 <a><img src="assets\images\rotatingSun.gif"></a>
                 <p class="sun-desc">The Sun located at the middle of our Galaxy is a 4.5 billion-year-old yellow dwarf star. It is comprised of hyrdogen and helium.</p>
+            </div>
+            <div class="zodiacs container d-flex flex-row justify-content-center align-items-center flex-wrap">
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\aquarius.png"></a>
+                    <p class="zodiac-desc">(Water Beaver): January 20 - February 18</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\aries.png"></a>
+                    <p class="zodiac-desc">(Ram): March 21 - April 19</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\cancer.png"></a>
+                    <p class="zodiac-desc">(Crab): June 22 - July 22</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\capricorn.png"></a>
+                    <p class="zodiac-desc">(Goat): Decemeber 22 - January 19</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\gemini.png"></a>
+                    <p class="zodiac-desc">(Twins): May 21 - June 21</p>
+                </div> 
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\leo.png"></a>
+                    <p class="zodiac-desc">(Lion): July 23 - August 22</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\libra.png"></a>
+                    <p class="zodiac-desc">(Balance): September 23 - October 23</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\pisces.png"></a>
+                    <p class="zodiac-desc">(Fish): February 19 - March 20</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\sagittarius.png"></a>
+                    <p class="zodiac-desc">(Archer): November 22 - December 21</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\scorpio.png"></a>
+                    <p class="zodiac-desc">(Scorpion): October 24 - November 21</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\taurus.png"></a>
+                    <p class="zodiac-desc">(Bull): April 20 - May 20</p>
+                </div>
+                <div class="zodiac-img">
+                    <a><img src="assets\images\zodiacs\virgo.png"></a>
+                    <p class="zodiac-desc">(Virgin): August 23 - September 22</p>
+                </div>
             </div>
         </div>
     </div>
