--- a/bigbangers.html
+++ b/bigbangers.html
@@ -5,25 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmic Coctail 2.0</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/bigbang.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="title">
-                <h1>Big Bangers</h1>
-            </div>
-            <div class="description">
-                <p>Wlecome to big bangers, our curated selection of top five best cosmic creations from around the known galaxy.</p>
-            </div>
-            <div>
-                <or id="rand5"></or>
-            </div>
-        </div>
-    </div>
+    <header class="title">
+        <h1>BIG BANGERS!</h1>
+        <p>Welcome to our curated selection of the top five cosmic creations from around the galaxy.</p>
+    </header>
+                <section class="content">
+                        <ol class="rando-five">
+                            <li>
+                                    <img src="">IMAGE
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                                <li>
+                                    <img src="">IMAGE
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                                <li>
+                                    <img src="">IMAGE
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                                <li>
+                                    <img src="">IMAGE
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                                <li>
+                                    <img src="">IMAGE
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                        </ol>
+                </section>
+
+                <section class="navigate">
+                    <p id="home">
+                        <a href="./index.html"><<< ET Go Home</p></a>
+                </section>
+
+                
+                <footer>
+                    <p>Cosmic Cocktail Creator © 2023. A Stellar Project by Group 3.</p></footer>            
+          
                 <!--JQuery Script-->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <!--NASA photos script-->
