added the api keys, still working on them

--- a/bigbangers.html
+++ b/bigbangers.html
@@ -15,29 +15,29 @@
         <h1>BIG BANGERS!</h1>
         <p>Welcome to our curated selection of the top five cosmic creations from around the galaxy.</p>
     </header>
-                <section class="content">
-                        <ol class="rando-five">
-                            <li>
+                <section>
+                        <ol id="rand5">
+                            <li id="1">
+                                    <img src="" aria-placeholder="IMAGE">
+                                    <h3>Title</h3>
+                                    <p>Description</p>
+                                </li>
+                                <li id="2">
                                     <img src="">IMAGE
                                     <h3>Title</h3>
                                     <p>Description</p>
                                 </li>
-                                <li>
+                                <li id="3">
                                     <img src="">IMAGE
                                     <h3>Title</h3>
                                     <p>Description</p>
                                 </li>
-                                <li>
+                                <li id="4">
                                     <img src="">IMAGE
                                     <h3>Title</h3>
                                     <p>Description</p>
                                 </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
+                                <li id="5">
                                     <img src="">IMAGE
                                     <h3>Title</h3>
                                     <p>Description</p>
