nasa background script fully functional! created a variable to pull images from objects into one array using map. created a loading function to hide when script runs. updated html to add divs to run these functions. started some styling in css

--- a/user-creations.html
+++ b/user-creations.html
@@ -10,7 +10,12 @@
      <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!--Loader-->
+    <div class="loader-hidden">Loading...
+      
+    </div>
     <div id="background">
+      <div id="all-content-hider">
       <div class="title">
         <h1>Cosmic Order</h1>
       </div>
@@ -61,6 +66,7 @@
         <button class="btn btn-secondary" id="mainBtn" placeholder="Main"></button>
       </div>
     </div>
+  </div>
             <!--JQuery Script-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!--NASA photos script-->
