add functionality to clicking zodiacs

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <!--Cocktail Generator script-->
-<script src="./assets/"></script>
+<script src="assets\space.js"></script>
 
 </body>
 </html>
