--- a/bigbangers.html
+++ b/bigbangers.html
@@ -15,35 +15,60 @@
         <h1>BIG BANGERS!</h1>
         <p>Welcome to our curated selection of the top five cosmic creations from around the galaxy.</p>
     </header>
-                <section class="content">
-                        <ol class="rando-five">
-                            <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                        </ol>
-                </section>
+    <section class="content">
+        <ol class="rando-five">
+                <li class="listEl">
+                    <img id="img-1">
+                    <h3 id="drink-1"></h3>
+                    <p id="desc-1">Description</p>
+                </li>2
+                <li class="listEl">
+                    <img id="img-2">
+                    <h3 id="drink-2"></h3>
+                    <p id="desc-2">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-3">3
+                    <h3 id="drink-3"></h3>
+                    <p id="desc-3">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-4">
+                    <h3 id="drink-4"></h3>
+                    <p id="desc-4">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-5">
+                    <h3 id="drink-5"></h3>
+                    <p id="desc-5">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-6">
+                    <h3 id="drink-6"></h3>
+                    <p id="desc-6">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-7">
+                    <h3 id="drink-7"></h3>
+                    <p id="desc-7">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-8">
+                    <h3 id="drink-8"></h3>
+                    <p id="desc-8">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-9">
+                    <h3 id="drink-9"></h3>
+                    <p id="desc-9">Description</p>
+                </li>
+                <li class="listEl">
+                    <img id="img-10">
+                    <h3 id="drink-10"></h3>
+                    <p id="desc-10">Description</p>
+                </li>
+        </ol>
+</section>
 
                 <section class="navigate">
                     <p id="home">
